# from_bytes

from_bytes/: Cargo.toml
from_bytes/src/: lib.rs
from_bytes_derive/: Cargo.toml
from_bytes_derive/src/: lib.rs
