[package]
name = "from_bytes_derive"
version = "0.2.0"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
edition = "2018"
repository = "https://github.com/janstarke/from_bytes"
description = "create from_bytes() and packed_size() to read binary data into structs"
license = "GPL-3.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
